Start update for completion tables after new tests

--- a/notebooks/41-Find-QARTOD-not-executed.ipynb
+++ b/notebooks/41-Find-QARTOD-not-executed.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "05aed376-e306-4387-89ac-59191d103d93",
    "metadata": {
     "tags": []
@@ -60,9 +60,7 @@
   {
    "cell_type": "markdown",
    "id": "2f933891-4b9b-4c15-a190-4a7bdfc02372",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Run cross-reference for tests executed on all refdes and datastreams at site\n",
     "\n",
@@ -269,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f3e37978-0f88-4098-bfec-50cb322da315",
    "metadata": {
     "tags": []
@@ -304,48 +302,109 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>CP01CNSM-SBD11-01-MOPAK0000</td>\n",
+       "      <td>GS01SUMO-SBD11-08-NUTNRB000</td>\n",
        "      <td>recovered_host</td>\n",
-       "      <td>mopak_o_dcl_accel_recovered</td>\n",
+       "      <td>nutnr_b_dcl_dark_full_instrument_recovered</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>CP01CNSM-SBD11-01-MOPAK0000</td>\n",
+       "      <td>GS01SUMO-SBD11-08-NUTNRB000</td>\n",
        "      <td>recovered_host</td>\n",
-       "      <td>mopak_o_dcl_rate_recovered</td>\n",
+       "      <td>nutnr_b_dcl_full_instrument_recovered</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>CP01CNSM-SBD11-01-MOPAK0000</td>\n",
+       "      <td>GS01SUMO-SBD11-08-NUTNRB000</td>\n",
+       "      <td>recovered_host</td>\n",
+       "      <td>suna_dcl_recovered</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>GS01SUMO-SBD11-08-NUTNRB000</td>\n",
+       "      <td>recovered_inst</td>\n",
+       "      <td>nutnr_b_dark_instrument_recovered</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GS01SUMO-SBD11-08-NUTNRB000</td>\n",
+       "      <td>recovered_inst</td>\n",
+       "      <td>nutnr_b_instrument_recovered</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>GS01SUMO-SBD11-08-NUTNRB000</td>\n",
+       "      <td>recovered_inst</td>\n",
+       "      <td>nutnr_b_metadata_recovered</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>GS01SUMO-SBD11-08-NUTNRB000</td>\n",
+       "      <td>recovered_inst</td>\n",
+       "      <td>suna_instrument_recovered</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>GS01SUMO-SBD11-08-NUTNRB000</td>\n",
        "      <td>telemetered</td>\n",
-       "      <td>mopak_o_dcl_accel</td>\n",
+       "      <td>nutnr_b_dcl_dark_full_instrument</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>GS01SUMO-SBD11-08-NUTNRB000</td>\n",
+       "      <td>telemetered</td>\n",
+       "      <td>nutnr_b_dcl_full_instrument</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>GS01SUMO-SBD11-08-NUTNRB000</td>\n",
+       "      <td>telemetered</td>\n",
+       "      <td>suna_dcl_recovered</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        refdes          method                       stream\n",
-       "0  CP01CNSM-SBD11-01-MOPAK0000  recovered_host  mopak_o_dcl_accel_recovered\n",
-       "1  CP01CNSM-SBD11-01-MOPAK0000  recovered_host   mopak_o_dcl_rate_recovered\n",
-       "2  CP01CNSM-SBD11-01-MOPAK0000     telemetered            mopak_o_dcl_accel"
+       "                        refdes          method  \\\n",
+       "0  GS01SUMO-SBD11-08-NUTNRB000  recovered_host   \n",
+       "1  GS01SUMO-SBD11-08-NUTNRB000  recovered_host   \n",
+       "2  GS01SUMO-SBD11-08-NUTNRB000  recovered_host   \n",
+       "3  GS01SUMO-SBD11-08-NUTNRB000  recovered_inst   \n",
+       "4  GS01SUMO-SBD11-08-NUTNRB000  recovered_inst   \n",
+       "5  GS01SUMO-SBD11-08-NUTNRB000  recovered_inst   \n",
+       "6  GS01SUMO-SBD11-08-NUTNRB000  recovered_inst   \n",
+       "7  GS01SUMO-SBD11-08-NUTNRB000     telemetered   \n",
+       "8  GS01SUMO-SBD11-08-NUTNRB000     telemetered   \n",
+       "9  GS01SUMO-SBD11-08-NUTNRB000     telemetered   \n",
+       "\n",
+       "                                       stream  \n",
+       "0  nutnr_b_dcl_dark_full_instrument_recovered  \n",
+       "1       nutnr_b_dcl_full_instrument_recovered  \n",
+       "2                          suna_dcl_recovered  \n",
+       "3           nutnr_b_dark_instrument_recovered  \n",
+       "4                nutnr_b_instrument_recovered  \n",
+       "5                  nutnr_b_metadata_recovered  \n",
+       "6                   suna_instrument_recovered  \n",
+       "7            nutnr_b_dcl_dark_full_instrument  \n",
+       "8                 nutnr_b_dcl_full_instrument  \n",
+       "9                          suna_dcl_recovered  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Define the refdes of a particular sensor to find datastreams available\n",
-    "refdes = \"CP01CNSM-SBD11-01-MOPAK0000\"\n",
+    "refdes = \"GS01SUMO-SBD11-08-NUTNRB000\"\n",
     "datastreams = M2M.get_datastreams(refdes)\n",
     "datastreams"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "f2ee90b2-7410-4829-9e65-350b721b6f62",
    "metadata": {
     "tags": []
@@ -355,8 +414,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Searching https://ooinet.oceanobservatories.org/api/m2m/12576/sensor/inv/CP01CNSM/SBD11\n",
-      "['CP01CNSM', 'SBD11', '01-MOPAK0000', 'recovered_host', 'mopak_o_dcl_accel_recovered', 1, 'MOPAK']\n"
+      "Searching https://ooinet.oceanobservatories.org/api/m2m/12576/sensor/inv/GS01SUMO/SBD11\n",
+      "['GS01SUMO', 'SBD11', '08-NUTNRB000', 'recovered_host', 'nutnr_b_dcl_dark_full_instrument_recovered', 4, 'NUTNR']\n"
      ]
     }
    ],
@@ -368,14 +427,14 @@
     "stream = datastreams.stream[m]\n",
     "datasets = M2M.search_datasets(array=site, node=node)\n",
     "match_inst = datasets.query('instrument == @sensor')\n",
-    "deploy = match_inst.deployments[0][0]\n",
+    "deploy = match_inst.deployments[0][3]\n",
     "instclass = sensor[3:8]\n",
     "print([site, node, sensor, method, stream, deploy, instclass])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "a2c8eaf5-125f-4cca-ba56-152e1ccde452",
    "metadata": {},
    "outputs": [
@@ -397,12 +456,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "e5ee4132-6a55-476b-ae33-d68deba5a263",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "sequence item 4: expected str instance, int found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m get_vocabulary(site, node, sensor)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(file_list)\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m----> 5\u001b[0m     deploy_info \u001b[38;5;241m=\u001b[39m M2M\u001b[38;5;241m.\u001b[39mget_deployments(refdes, deploy_num\u001b[38;5;241m=\u001b[39mdeploy)\n\u001b[1;32m      6\u001b[0m     start_datetime \u001b[38;5;241m=\u001b[39m deploy_info\u001b[38;5;241m.\u001b[39mdeployStart\n\u001b[1;32m      7\u001b[0m     start_datetime \u001b[38;5;241m=\u001b[39m start_datetime\u001b[38;5;241m.\u001b[39misoformat(timespec\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmilliseconds\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mZ\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "File \u001b[0;32m~/code/OOINet/ooinet/M2M.py:394\u001b[0m, in \u001b[0;36mget_deployments\u001b[0;34m(refdes, deploy_num, results)\u001b[0m\n\u001b[1;32m    392\u001b[0m \u001b[38;5;66;03m# First, build the request\u001b[39;00m\n\u001b[1;32m    393\u001b[0m array, node, instrument \u001b[38;5;241m=\u001b[39m refdes\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m--> 394\u001b[0m deploy_url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin((URLS[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdeploy\u001b[39m\u001b[38;5;124m\"\u001b[39m], array, node, instrument,\n\u001b[1;32m    395\u001b[0m                        deploy_num))\n\u001b[1;32m    397\u001b[0m \u001b[38;5;66;03m# Next, get the deployments from the deploy url. The API returns a list\u001b[39;00m\n\u001b[1;32m    398\u001b[0m \u001b[38;5;66;03m# of dictionary objects with the deployment data.\u001b[39;00m\n\u001b[1;32m    399\u001b[0m deployments \u001b[38;5;241m=\u001b[39m get_api(deploy_url)\n",
+      "\u001b[0;31mTypeError\u001b[0m: sequence item 4: expected str instance, int found"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell with one file name for FDCHP recovered inst on the kdata server \n",
     "# (until I figure out a better way)\n",
