--- a/notebooks/42-Sort-missed-data-streams.ipynb
+++ b/notebooks/42-Sort-missed-data-streams.ipynb
@@ -60,8 +60,8 @@
     "    file = open(path_to_file, \"r\")\n",
     "    all_skipped = list()\n",
     "    for text in file.readlines():\n",
-    "        if \"Skipped\" in text:\n",
-    "            skipped = re.findall(\".{8}-.{5}-.{2}-.{9}-[a-z_0-9]+\", text)\n",
+    "        if \"skipped\" in text:\n",
+    "            skipped = re.findall(\".{8}-.{5}-.{2}-.{9}\", text)\n",
     "            all_skipped.append(skipped)\n",
     "    return all_skipped\n",
     "\n",
@@ -82,8 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "array = \"GA\"\n",
-    "site = \"GA01SUMO\"\n",
+    "array = \"GS\"\n",
+    "site = \"GS01SUMO\"\n",
     "# path = f\"../data/processed/{array}_tests_completed1/{site}-typescript.txt\"\n",
     "path = f\"../data/processed/{array}_tests_completed2/{site}-output.txt\""
    ]
@@ -97,7 +97,7 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[['GS01SUMO-SBD12-08-FDCHPA000'], ['GS01SUMO-SBD11-01-MOPAK0000']]"
       ]
      },
      "execution_count": 4,
@@ -136,172 +136,19 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "38ddc660-4f70-4c30-88f3-83ae578cefa4",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['GA01SUMO-SBD12-06-METBKA000-metbk_hourly'],\n",
-       " ['GA01SUMO-SBD12-06-METBKA000-metbk_hourly'],\n",
-       " ['GA01SUMO-SBD12-06-METBKA000-metbk_hourly'],\n",
-       " ['GA01SUMO-SBD12-06-METBKA000-metbk_hourly'],\n",
-       " ['GA01SUMO-SBD12-05-WAVSSA000-wavss_a_dcl_fourier_recovered'],\n",
-       " ['GA01SUMO-SBD12-05-WAVSSA000-wavss_a_dcl_motion_recovered'],\n",
-       " ['GA01SUMO-SBD12-05-WAVSSA000-wavss_a_dcl_non_directional_recovered'],\n",
-       " ['GA01SUMO-SBD12-05-WAVSSA000-wavss_a_dcl_fourier'],\n",
-       " ['GA01SUMO-SBD12-05-WAVSSA000-wavss_a_dcl_motion'],\n",
-       " ['GA01SUMO-SBD12-05-WAVSSA000-wavss_a_dcl_non_directional'],\n",
-       " ['GA01SUMO-SBD12-03-HYDGN0000-hyd_o_dcl_instrument_recovered'],\n",
-       " ['GA01SUMO-SBD12-03-HYDGN0000-hyd_o_dcl_instrument'],\n",
-       " ['GA01SUMO-SBD12-01-OPTAAD000-optaa_dj_dcl_metadata_recovered'],\n",
-       " ['GA01SUMO-SBD12-01-OPTAAD000-optaa_dj_dcl_metadata'],\n",
-       " ['GA01SUMO-SBD12-00-DCLENG000-cg_dcl_eng_dcl_cpu_uptime_recovered'],\n",
-       " ['GA01SUMO-SBD12-00-DCLENG000-cg_dcl_eng_dcl_dlog_mgr_recovered'],\n",
-       " ['GA01SUMO-SBD12-00-DCLENG000-cg_dcl_eng_dcl_dlog_status_recovered'],\n",
-       " ['GA01SUMO-SBD12-00-DCLENG000-cg_dcl_eng_dcl_error_recovered'],\n",
-       " ['GA01SUMO-SBD12-00-DCLENG000-cg_dcl_eng_dcl_gps_recovered'],\n",
-       " ['GA01SUMO-SBD12-00-DCLENG000-cg_dcl_eng_dcl_msg_counts_recovered'],\n",
-       " ['GA01SUMO-SBD12-00-DCLENG000-cg_dcl_eng_dcl_pps_recovered'],\n",
-       " ['GA01SUMO-SBD12-00-DCLENG000-cg_dcl_eng_dcl_status_recovered'],\n",
-       " ['GA01SUMO-SBD12-00-DCLENG000-cg_dcl_eng_dcl_superv_recovered'],\n",
-       " ['GA01SUMO-SBD12-00-DCLENG000-cg_dcl_eng_dcl_cpu_uptime'],\n",
-       " ['GA01SUMO-SBD12-00-DCLENG000-cg_dcl_eng_dcl_dlog_mgr'],\n",
-       " ['GA01SUMO-SBD12-00-DCLENG000-cg_dcl_eng_dcl_dlog_status'],\n",
-       " ['GA01SUMO-SBD12-00-DCLENG000-cg_dcl_eng_dcl_error'],\n",
-       " ['GA01SUMO-SBD12-00-DCLENG000-cg_dcl_eng_dcl_gps'],\n",
-       " ['GA01SUMO-SBD12-00-DCLENG000-cg_dcl_eng_dcl_msg_counts'],\n",
-       " ['GA01SUMO-SBD12-00-DCLENG000-cg_dcl_eng_dcl_pps'],\n",
-       " ['GA01SUMO-SBD12-00-DCLENG000-cg_dcl_eng_dcl_status'],\n",
-       " ['GA01SUMO-SBD12-00-DCLENG000-cg_dcl_eng_dcl_superv'],\n",
-       " ['GA01SUMO-SBD11-08-NUTNRB000-nutnr_b_metadata_recovered'],\n",
-       " ['GA01SUMO-SBD11-06-METBKA000-metbk_hourly'],\n",
-       " ['GA01SUMO-SBD11-06-METBKA000-metbk_hourly'],\n",
-       " ['GA01SUMO-SBD11-06-METBKA000-metbk_hourly'],\n",
-       " ['GA01SUMO-SBD11-06-METBKA000-metbk_hourly'],\n",
-       " ['GA01SUMO-SBD11-05-SPKIRB000-spkir_abj_dcl_instrument_recovered'],\n",
-       " ['GA01SUMO-SBD11-05-SPKIRB000-spkir_abj_dcl_instrument'],\n",
-       " ['GA01SUMO-SBD11-03-HYDGN0000-hyd_o_dcl_instrument_recovered'],\n",
-       " ['GA01SUMO-SBD11-03-HYDGN0000-hyd_o_dcl_instrument'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_cpu_uptime_recovered'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_dlog_aarm_recovered'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_dlog_mgr_recovered'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_dlog_status_recovered'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_error_recovered'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_gps_recovered'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_msg_counts_recovered'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_pps_recovered'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_status_recovered'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_superv_recovered'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_cpu_uptime'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_dlog_aarm'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_dlog_mgr'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_dlog_status'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_error'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_gps'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_msg_counts'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_pps'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_status'],\n",
-       " ['GA01SUMO-SBD11-00-DCLENG000-cg_dcl_eng_dcl_superv'],\n",
-       " ['GA01SUMO-SBC11-00-CPMENG000-cg_cpm_eng_cpm_recovered'],\n",
-       " ['GA01SUMO-SBC11-00-CPMENG000-cg_cpm_eng_cpm'],\n",
-       " ['GA01SUMO-RII11-02-PHSENE042-phsen_abcdef_imodem_metadata_recovered'],\n",
-       " ['GA01SUMO-RII11-02-PHSENE042-phsen_abcdef_metadata'],\n",
-       " ['GA01SUMO-RII11-02-PHSENE042-phsen_abcdef_imodem_metadata'],\n",
-       " ['GA01SUMO-RII11-02-PHSENE041-phsen_abcdef_imodem_metadata_recovered'],\n",
-       " ['GA01SUMO-RII11-02-PHSENE041-phsen_abcdef_metadata'],\n",
-       " ['GA01SUMO-RII11-02-PHSENE041-phsen_abcdef_imodem_metadata'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC053-pco2w_abc_imodem_instrument_blank_recovered'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC053-pco2w_abc_imodem_metadata_recovered'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC053-pco2w_abc_imodem_power_recovered'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC053-pco2w_abc_instrument_blank'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC053-pco2w_abc_metadata'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC053-pco2w_abc_power'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC053-pco2w_abc_imodem_instrument_blank'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC053-pco2w_abc_imodem_metadata'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC053-pco2w_abc_imodem_power'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC052-pco2w_abc_imodem_instrument_blank_recovered'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC052-pco2w_abc_imodem_metadata_recovered'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC052-pco2w_abc_imodem_power_recovered'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC052-pco2w_abc_instrument_blank'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC052-pco2w_abc_power'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC052-pco2w_abc_imodem_instrument_blank'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC052-pco2w_abc_imodem_metadata'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC052-pco2w_abc_imodem_power'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC051-pco2w_abc_imodem_instrument_blank_recovered'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC051-pco2w_abc_imodem_metadata_recovered'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC051-pco2w_abc_imodem_power_recovered'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC051-pco2w_abc_instrument_blank'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC051-pco2w_abc_power'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC051-pco2w_abc_imodem_instrument_blank'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC051-pco2w_abc_imodem_metadata'],\n",
-       " ['GA01SUMO-RII11-02-PCO2WC051-pco2w_abc_imodem_power'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOR020-ctdmo_ghqr_imodem_metadata_recovered'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOR020-ctdmo_ghqr_imodem_metadata'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOR019-ctdmo_ghqr_imodem_metadata_recovered'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOR019-ctdmo_ghqr_imodem_metadata'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOR018-ctdmo_ghqr_imodem_metadata_recovered'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOR018-ctdmo_ghqr_imodem_metadata'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOQ033-ctdmo_ghqr_imodem_metadata_recovered'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOQ033-ctdmo_ghqr_imodem_metadata'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOQ031-ctdmo_ghqr_imodem_metadata_recovered'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOQ031-ctdmo_ghqr_imodem_metadata'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOQ017-ctdmo_ghqr_imodem_metadata_recovered'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOQ017-ctdmo_ghqr_imodem_metadata'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOQ016-ctdmo_ghqr_imodem_metadata_recovered'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOQ016-ctdmo_ghqr_imodem_metadata'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOQ015-ctdmo_ghqr_imodem_metadata_recovered'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOQ015-ctdmo_ghqr_imodem_metadata'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOQ014-ctdmo_ghqr_imodem_metadata_recovered'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOQ014-ctdmo_ghqr_imodem_metadata'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOQ013-ctdmo_ghqr_imodem_metadata_recovered'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOQ013-ctdmo_ghqr_imodem_metadata'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOQ012-ctdmo_ghqr_imodem_metadata_recovered'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOQ012-ctdmo_ghqr_imodem_metadata'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOQ011-ctdmo_ghqr_imodem_metadata_recovered'],\n",
-       " ['GA01SUMO-RII11-02-CTDMOQ011-ctdmo_ghqr_imodem_metadata'],\n",
-       " ['GA01SUMO-RII11-02-ADCPSN010-adcps_jln_stc_instrument_recovered'],\n",
-       " ['GA01SUMO-RII11-02-ADCPSN010-adcps_jln_stc_metadata_recovered'],\n",
-       " ['GA01SUMO-RII11-02-ADCPSN010-adcp_config'],\n",
-       " ['GA01SUMO-RII11-02-ADCPSN010-adcp_engineering'],\n",
-       " ['GA01SUMO-RII11-02-ADCPSN010-adcp_velocity_earth'],\n",
-       " ['GA01SUMO-RII11-02-ADCPSN010-adcps_jln_stc_instrument'],\n",
-       " ['GA01SUMO-RII11-02-ADCPSN010-adcps_jln_stc_metadata'],\n",
-       " ['GA01SUMO-RID16-07-NUTNRB000-nutnr_b_metadata_recovered'],\n",
-       " ['GA01SUMO-RID16-05-PCO2WB000-pco2w_abc_dcl_instrument_blank_recovered'],\n",
-       " ['GA01SUMO-RID16-05-PCO2WB000-pco2w_abc_dcl_metadata_recovered'],\n",
-       " ['GA01SUMO-RID16-05-PCO2WB000-pco2w_abc_dcl_power_recovered'],\n",
-       " ['GA01SUMO-RID16-05-PCO2WB000-pco2w_abc_instrument_blank'],\n",
-       " ['GA01SUMO-RID16-05-PCO2WB000-pco2w_abc_metadata'],\n",
-       " ['GA01SUMO-RID16-05-PCO2WB000-pco2w_abc_power'],\n",
-       " ['GA01SUMO-RID16-05-PCO2WB000-pco2w_abc_dcl_instrument_blank'],\n",
-       " ['GA01SUMO-RID16-05-PCO2WB000-pco2w_abc_dcl_metadata'],\n",
-       " ['GA01SUMO-RID16-05-PCO2WB000-pco2w_abc_dcl_power'],\n",
-       " ['GA01SUMO-RID16-04-VELPTA000-velpt_ab_dcl_diagnostics_metadata_recovered'],\n",
-       " ['GA01SUMO-RID16-04-VELPTA000-velpt_ab_dcl_diagnostics_recovered'],\n",
-       " ['GA01SUMO-RID16-04-VELPTA000-velpt_ab_diagnostics_metadata_recovered'],\n",
-       " ['GA01SUMO-RID16-04-VELPTA000-velpt_ab_diagnostics_recovered'],\n",
-       " ['GA01SUMO-RID16-04-VELPTA000-velpt_ab_dcl_diagnostics'],\n",
-       " ['GA01SUMO-RID16-04-VELPTA000-velpt_ab_dcl_diagnostics_metadata'],\n",
-       " ['GA01SUMO-RID16-01-OPTAAD000-optaa_dj_dcl_metadata_recovered'],\n",
-       " ['GA01SUMO-RID16-01-OPTAAD000-optaa_dj_dcl_metadata'],\n",
-       " ['GA01SUMO-RID16-00-DCLENG000-cg_dcl_eng_dcl_cpu_uptime_recovered'],\n",
-       " ['GA01SUMO-RID16-00-DCLENG000-cg_dcl_eng_dcl_dlog_mgr_recovered'],\n",
-       " ['GA01SUMO-RID16-00-DCLENG000-cg_dcl_eng_dcl_dlog_status_recovered'],\n",
-       " ['GA01SUMO-RID16-00-DCLENG000-cg_dcl_eng_dcl_error_recovered'],\n",
-       " ['GA01SUMO-RID16-00-DCLENG000-cg_dcl_eng_dcl_gps_recovered'],\n",
-       " ['GA01SUMO-RID16-00-DCLENG000-cg_dcl_eng_dcl_msg_counts_recovered'],\n",
-       " ['GA01SUMO-RID16-00-DCLENG000-cg_dcl_eng_dcl_pps_recovered'],\n",
-       " ['GA01SUMO-RID16-00-DCLENG000-cg_dcl_eng_dcl_status_recovered'],\n",
-       " ['GA01SUMO-RID16-00-DCLENG000-cg_dcl_eng_dcl_superv_recovered'],\n",
-       " ['GA01SUMO-RID16-00-DCLENG000-cg_dcl_eng_dcl_cpu_uptime'],\n",
-       " ['GA01SUMO-RID16-00-DCLENG000-cg_dcl_eng_dcl_dlog_mgr'],\n",
-       " ['GA01SUMO-RID16-00-DCLENG000-cg_dcl_eng_dcl_dlog_status'],\n",
-       " ['GA01SUMO-RID16-00-DCLENG000-cg_dcl_eng_dcl_error'],\n",
-       " ['GA01SUMO-RID16-00-DCLENG000-cg_dcl_eng_dcl_gps'],\n",
-       " ['GA01SUMO-RID16-00-DCLENG000-cg_dcl_eng_dcl_msg_counts'],\n",
-       " ['GA01SUMO-RID16-00-DCLENG000-cg_dcl_eng_dcl_pps'],\n",
-       " ['GA01SUMO-RID16-00-DCLENG000-cg_dcl_eng_dcl_status'],\n",
-       " ['GA01SUMO-RID16-00-DCLENG000-cg_dcl_eng_dcl_superv']]"
+       "[['GS01SUMO-SBD11-05-SPKIRB000-spkir_abj_dcl_instrument_recovered'],\n",
+       " ['GS01SUMO-SBD11-05-SPKIRB000-spkir_abj_dcl_instrument'],\n",
+       " ['GS01SUMO-RII11-02-ADCPSN010-adcps_jln_stc_instrument_recovered'],\n",
+       " ['GS01SUMO-RII11-02-ADCPSN010-adcp_engineering'],\n",
+       " ['GS01SUMO-RII11-02-ADCPSN010-adcp_velocity_earth'],\n",
+       " ['GS01SUMO-RII11-02-ADCPSN010-adcps_jln_stc_instrument']]"
       ]
      },
      "execution_count": 6,
@@ -323,12 +170,12 @@
     {
      "data": {
       "text/plain": [
-       "[['GA01SUMO-SBD11-05-SPKIRB000-spkir_abj_dcl_instrument_recovered'],\n",
-       " ['GA01SUMO-SBD11-05-SPKIRB000-spkir_abj_dcl_instrument'],\n",
-       " ['GA01SUMO-RII11-02-ADCPSN010-adcps_jln_stc_instrument_recovered'],\n",
-       " ['GA01SUMO-RII11-02-ADCPSN010-adcp_engineering'],\n",
-       " ['GA01SUMO-RII11-02-ADCPSN010-adcp_velocity_earth'],\n",
-       " ['GA01SUMO-RII11-02-ADCPSN010-adcps_jln_stc_instrument']]"
+       "['GS01SUMO-SBD11-05-SPKIRB000-spkir_abj_dcl_instrument_recovered',\n",
+       " 'GS01SUMO-SBD11-05-SPKIRB000-spkir_abj_dcl_instrument',\n",
+       " 'GS01SUMO-RII11-02-ADCPSN010-adcps_jln_stc_instrument_recovered',\n",
+       " 'GS01SUMO-RII11-02-ADCPSN010-adcp_engineering',\n",
+       " 'GS01SUMO-RII11-02-ADCPSN010-adcp_velocity_earth',\n",
+       " 'GS01SUMO-RII11-02-ADCPSN010-adcps_jln_stc_instrument']"
       ]
      },
      "execution_count": 7,
@@ -338,38 +185,30 @@
    ],
    "source": [
     "# Filter for untested streams\n",
-    "def remove_streams(stream_list, phrase):\n",
-    "    filtered_list = [x for x in stream_list if phrase not in x[0]]\n",
+    "from numpy import mean\n",
+    "def remove_streams(stream_list, skip_kw):\n",
+    "    filtered_list = []\n",
+    "    for stream in stream_list:\n",
+    "        skip_stream = [stream[0].find(x) for x in skip_kw]\n",
+    "        if mean(skip_stream)!=-1:\n",
+    "            continue\n",
+    "        filtered_list.append(stream[0])\n",
     "    return filtered_list\n",
     "\n",
-    "sans_power = remove_streams(no_qcConfig, \"power\")\n",
-    "sans_metadata = remove_streams(sans_power, \"metadata\")\n",
-    "sans_blank = remove_streams(sans_metadata, \"blank\")\n",
-    "sans_diagnostic = remove_streams(sans_blank, \"diagnostic\")\n",
-    "sans_dcleng = remove_streams(sans_diagnostic, \"dcl_eng\")\n",
-    "sans_cpmeng = remove_streams(sans_dcleng, \"cpm_eng\")\n",
-    "sans_methourly = remove_streams(sans_cpmeng, \"metbk_hourly\")\n",
-    "sans_hyd = remove_streams(sans_methourly, \"hyd_o\")\n",
-    "sans_wavfourier = remove_streams(sans_hyd, \"wavss_a_dcl_fourier\")\n",
-    "sans_wavmotion = remove_streams(sans_wavfourier, \"wavss_a_dcl_motion\")\n",
-    "sans_wavnondir = remove_streams(sans_wavmotion, \"wavss_a_dcl_non_dir\")\n",
-    "sans_mopakrate = remove_streams(sans_wavnondir, \"mopak_o_dcl_rate\")\n",
-    "sans_presfwav = remove_streams(sans_mopakrate, \"wave_burst\")\n",
-    "sans_wfpeng = remove_streams(sans_presfwav, \"wfp_eng\")\n",
-    "sans_offset = remove_streams(sans_wfpeng, \"offset\")\n",
-    "sans_sioeng = remove_streams(sans_offset, \"sio_eng\")\n",
-    "sans_gleng = remove_streams(sans_sioeng, \"glider_eng\")\n",
-    "sans_glgps = remove_streams(sans_gleng, \"glider_gps\")\n",
-    "sans_adcpcon = remove_streams(sans_glgps, \"adcp_config\")\n",
-    "sans_phctrl = remove_streams(sans_adcpcon, \"imodem_control\")\n",
-    "filtered_noQC = sans_phctrl\n",
+    "skip_kw = [\"power\", \"metadata\", \"blank\", \"diagnostic\", \"dcl_eng\", \"cpm_eng\",\n",
+    "           \"metbk_hourly\", \"hyd_o\", \"wavss_a_dcl_fourier\",\n",
+    "           \"wavss_a_dcl_motion\", \"wavss_a_dcl_non_dir\", \"mopak_o_dcl_rate\",\n",
+    "           \"wave_burst\", \"wfp_eng\", \"offset\", \"sio_eng\", \"glider_eng\",\n",
+    "           \"glider_gps\", \"adcp_config\", \"imodem_control\"]\n",
+    "\n",
+    "filtered_noQC = remove_streams(no_qcConfig, skip_kw)\n",
     "filtered_noQC"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25945ef9-ce2e-4500-bfd7-7ae77eb6fa6c",
+   "id": "4a0d32e6-cdb7-4018-a75e-5db5724aecd3",
    "metadata": {},
    "outputs": [],
    "source": []
